--- a/DB3/appsettings.json
+++ b/DB3/appsettings.json
@@ -1,3 +1,5 @@
 {
-
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=SchoolSystemManager;User Id=sa;Password=YourPassword123;TrustServerCertificate=True;"
+  }
 }
